# speech-tutor

./: .env.example  .gitignore  ARCHITECTURE.md  EVAL_STRATEGY.md  MEMORY_AND_STATE_STRATEGY.md  PERSONALIZED_PRACTICE_STARTERS.md  PRODUCTION_GAP_ANALYSIS.md  PROJECT_OVERVIEW.md  PROMPT_ARCHITECTURE.md  README.md  SOUL.md  eval-multimodal.md  package.json  pyproject.toml
server/: config.py  latency_log.py  main.py  prompt_builder.py  prosody.py  session.py  tts_pipeline.py  turn_debug_log.py  ws_handler.py
server/providers/: __init__.py  llm_anthropic.py  llm_openai.py  pronunciation_null.py  protocols.py  stt_faster_whisper.py  stt_openai.py  stt_utils.py  tts_edge.py  tts_openai.py
tests/: conftest.py  test_prosody.py  test_providers.py  test_session.py  test_stt_utils.py  test_tts_pipeline.py  test_tts_providers.py  test_ws_handler.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  AudioPlayer.svelte  Dashboard.svelte  DashboardCharts.svelte  MicButton.svelte  TextInput.svelte  TranscriptChip.svelte  app.d.ts  dashboardData.contract.ts  dashboardData.ts  dashboardView.contract.ts
web/src/lib/: ws.ts
